<resources>
    <string name="app_name">Fire TV Remote</string>
    <string name="ip_address_hint">IP address or host name</string>
    <string name="port_hint">Port (usually 5555)</string>
    <string name="connect_button">Connect</string>
    <string name="firetv_up">Up</string>
    <string name="firetv_down">Down</string>
    <string name="firetv_left">Left</string>
    <string name="firetv_right">Right</string>
    <string name="channel_name">Connection Info</string>
    <string name="firetv_ok">OK</string>
    <string name="firetv_volume_down">Volume Down</string>
    <string name="firetv_volume_up">Volume Up</string>
    <string name="firetv_mute">Mute</string>
    <string name="firetv_channel_up">Channel Up</string>
    <string name="firetv_channel_down">Channel Down</string>
    <string name="firetv_netflix">NetFlix</string>
    <string name="firetv_prime_video">PrimeVideo</string>
    <string name="firetv_youtube">YouTube</string>
    <string name="firetv_minitv">MiniTV</string>
    <string name="firetv_goback">Back</string>
    <string name="firetv_backward">Backward</string>
    <string name="firetv_play_pause">Play/Pause</string>
    <string name="firetv_fast_forward">Fast Forward</string>
    <string name="firetv_options">Options</string>
    <string name="firetv_home">Home</string>
    <string name="firetv_apps">Apps</string>
    <string name="firetv_settings">Settings</string>
    <string name="firetv_sleep">Sleep</string>
    <string name="firetv_keyboard">Keyboard</string>
    <string name="firetv_wake_up">Wake</string>
    <string name="firetv_enter_text_here">Enter Text Here</string>
    <string name="firetv_send">Send</string>
    <string name="firetv_headphone">Headphone</string>
    <string name="firetv_disconnect">Disconnect</string>
    <string name="firetv_step_1">Step 1:</string>
    <string name="firetv_step_1_setup_instructions">Click on Find Listener button to\nfind Amazon Pro Remote device</string>
    <string name="firetv_find_device">Find Device</string>
</resources>